--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>:o)</title>
+    <meta
+      name="description"
+      content="gabebot - A Discord Bot"
+    />
+    <title>gabebot - A Discord Bot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
